--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li>Vagrant</li>
 		<li>Docker</li>
 		<li>Ansible</li>
-		<li>Integ Continua...</li>
+		<li>Integ Contínua...</li>
 
 	</ul>
 </body>
