Acrescentado novo curso no final da lista, exemplo Git

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li>Ansible</li>
 		<li>Integ Contínua...</li>
 		<li>git log cheatsheet</li>
+		<li>Novo Curso adicionado para exemplo do GitHub</li>
 		
 
 	</ul>
