Alterando o titulo da pagina

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 	<meta charset="utf-8">
-	<title>Curso Git</title>
+	<title>Curso de DevOps da Alura</title>
 
 </head>
 
