--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<li>Integ Contínua...</li>
 		<li>git log cheatsheet</li>
 		<li>Novo Curso adicionado para exemplo do GitHub</li>
+		<li>Kubernetes</li>
 		
 
 	</ul>
