--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 	<meta charset="utf-8">
-	<title>Lista de Cursos de DevOps da Alura</title>
+	<title> -- Lista de Cursos de DevOps da Alura -- </title>
 
 </head>
 
