--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<ul>
 		<li>Vagrant</li>
-		<li>Docker</li>
+		<li>Curso de Docker: Criando containers sem dor de cabeça</li>
 		<li>Ansible</li>
 		<li>Integ Contínua...</li>
 		<li>git log cheatsheet</li>
