--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<ul>
-		<li>Vagrant</li>
+		<li>Vagrant: Gerenciando máquinas virtuais</li>
 		<li>Docker: Criando containers sem dor de cabeça</li>
 		<li>Ansible</li>
 		<li>Integ Contínua...</li>
