--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 	<ul>
 		<li>Vagrant: Gerenciando máquinas virtuais</li>
 		<li>Docker: Criando containers sem dor de cabeça</li>
-		<li>Ansible</li>
-		<li>Integ Contínua...</li>
-		<li>git log cheatsheet</li>
+		<li>Ansible: Sua infraestrutura como código</li>
+		<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 		<li>Novo Curso adicionado para exemplo do GitHub</li>
-		<li>Kubernetes</li>
-		
-
+		<li>Kubernetes: Introdução a orquestração de containers</li>
 	</ul>
 </body>
+</html>
